schema for db and comments on front

--- a/dvrclient/src/scss/_eventCard.scss
+++ b/dvrclient/src/scss/_eventCard.scss
@@ -6,6 +6,7 @@ $font-body: Roboto, 'Helvetica Neue', Helvetica, Arial, Sans-serif;
 $screenSize: 91vw;
 $washedAmber: #FFECB3;
 $lightWash: lighten($washedAmber, 10%);
+//event page cards -- the gathering page
 .eventHeader {
     color: $hotpink;
 }
