--- a/dvrclient/src/scss/_gatheringCards.scss
+++ b/dvrclient/src/scss/_gatheringCards.scss
@@ -6,6 +6,7 @@ $circleText: 25px;
 $textSize: 20px;
 $washedAmber: #FFECB3;
 $lightWash: lighten($washedAmber, 10%);
+//the event card tiles long
 
 .circleText {
     font-size: $circleText;
