--- a/dvrclient/src/scss/_layout.scss
+++ b/dvrclient/src/scss/_layout.scss
@@ -1,7 +1,7 @@
 $paginateSize: 40px;
 $lightgrey: #E0E0E0;
 $washedAmber: #FFECB3;
-
+//header and footer css
 .homeButton {
     align-self: center
     
