--- a/dvrclient/src/scss/_login.scss
+++ b/dvrclient/src/scss/_login.scss
@@ -1,7 +1,7 @@
 $backIma: url('/img/frontpage.jpg');
 $transparentOverlay: linear-gradient(to top, rgba(255,255,255,.5), rgba(255,255,255,.9));
 $redirectFontSize: 12px;
-
+//login and registration css
 
 .loginCard {
     width: 325px;
